# identifiers

./: Cargo.toml  README.md
.github/workflows/: published.yml
src/: dict.rs  lib.rs  test.rs  uwu.rs
